# fastbot

./: README.md  pyproject.toml
src/fastbot/: bot.py  message.py  plugin.py
src/fastbot/event/: __init__.py  message.py  meta.py  notice.py  request.py
