[project]
name = "fastbot-onebot"
version = "2026.5.28"
description = "a lightweight bot framework"
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastbot"]
